--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "tsc",
     "start": "node dist/index2.js",
     "watch": "tsc -w",
-    "dev": "nodemon dist/index2.js"
+    "dev": "nodemon dist/index2.js",
+    "test": "jest --config src/jest.config.js",
+    "test-w": "jest --config src/jest.config.js --watch"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
@@ -19,8 +21,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.4",
     "@types/node": "^17.0.38",
+    "jest": "^28.1.2",
+    "mongodb-memory-server": "^8.7.2",
     "nodemon": "^2.0.16",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   }
