--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test-w": "jest --config src/jest.config.js --watch"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
