--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/nodemailer": "^6.4.4",
+    "@types/uuid": "^8.3.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.7.0"
+    "mongodb": "^4.7.0",
+    "nodemailer": "^6.7.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
